[Map] Fix for sidebar text positioning and map marker on small screens

--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -1350,7 +1350,7 @@ body {
                                 pointer-events: none;
                                 transform: rotate(270deg);
                                 position: absolute;
-                                width: 25vh;
+                                width: 73vh;
                                 display: flex;
                                 align-items: center;
                                 justify-content: center;
