--- a/src/styles.css
+++ b/src/styles.css
@@ -1354,7 +1354,7 @@ body {
   pointer-events: none;
   transform: rotate(270deg);
   position: absolute;
-  width: 25vh;
+  width: 73vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -2131,6 +2131,12 @@ body {
   }
   .mobile-menu .mobileMenuContact .address .separator {
     display: none;
+  }
+}
+@media screen and (min-width: 769px) and (min-width: 769px) and (max-width: 1030px) {
+  .slides_wrapper .slides_inner .slide.slideTemplate-map .mapSection .mapMotionLogo > img {
+    height: 87px;
+    transform: translate(-25px, -37px);
   }
 }
 @media screen and (min-width: 769px) and (max-height: 700px) {
